--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -22,7 +22,8 @@
         </ul>
         <ul class="right">
           <li><a href="/about">About</a></li>
-          <li><a href="/sales">View All Sale</a></li>
+          <li><a href="{% url 'sales_create' %}">Add a Sale</a></li>
+          <li><a href="/sales">View All Sales</a></li>
         </ul>
       </div>
     </nav>
