--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -23,6 +23,8 @@
         </ul>
         <ul class="right">
           <li><a href="/about">About</a></li>
+          <li><a href="{% url 'genres_create' %}">Add a Genres</a></li>
+          <li><a href="{% url 'genres_index' %}">View All Genres</a></li>
           <li><a href="{% url 'sales_create' %}">Add a Sale</a></li>
           <li><a href="/sales">View All Sales</a></li>
         </ul>
