--- a/main_app/templates/sales/detail.html
+++ b/main_app/templates/sales/detail.html
@@ -36,6 +36,46 @@
   </table>
 </div>
 </div>
+<!-- This is all new markup to be added just above the <script> tag -->
+  <hr>
+  <div class="row">
+    <div class="col s6">
+      <h3>{{ sale.name }}'s Toys</h3>
+      {% if sale.genres.count %}
+        {% for genres in sale.genres.all %}
+          <div class="card">
+            <div class="card-content">
+              <span class="card-title">
+              <span style="color: {{ genres.color }}">{{ genres.name }}</span> 
+              </span>
+            </div>
+          </div>
+        {% endfor %}
+      {% else %}
+        <h5>No Genres :(</h5>
+      {% endif %}
+    </div>
+    <div class="col s6">
+      <h3>Available Genres</h3>
+      {% if genres.count %}
+        {% for genres in genres.all %}
+          <div class="card">
+            <div class="card-content">
+              <span class="card-title">
+              <span style="color: {{ genres.color }}">{{ genres.name }}</span> 
+              </span>
+            </div>
+            <div class="card-action">
+              <form action="{% url 'assoc_genres' sale.id genres.id %}" method="post">
+                {% csrf_token %}
+                <button type="submit" class="btn">Add</button>
+              </form>
+            </div>
+          </div>
+        {% endfor %}
+      {% else %}
+        <h5>{{cat.name}} Already Has All Genres Available</h5>
+      {% endif %}
 <script>
   var dateEl = document.getElementById('id_date');
   M.Datepicker.init(dateEl, {
