--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -23,10 +23,16 @@
         </ul>
         <ul class="right">
           <li><a href="/about">About</a></li>
+          {% if user.is_authenticated %}
           <li><a href="{% url 'genres_create' %}">Add a Genres</a></li>
           <li><a href="{% url 'genres_index' %}">View All Genres</a></li>
           <li><a href="{% url 'sales_create' %}">Add a Sale</a></li>
           <li><a href="/sales">View All Sales</a></li>
+          <li><a href="{% url 'logout' %}">Log Out</a></li>
+          {% else %}
+            <li><a href="{% url 'signup' %}">Sign Up</a></li>
+            <li><a href="{% url 'login' %}">Log In</a></li>
+          {% endif %}
         </ul>
       </div>
     </nav>
