--- a/main_app/templates/sales/detail.html
+++ b/main_app/templates/sales/detail.html
@@ -40,7 +40,7 @@
   <hr>
   <div class="row">
     <div class="col s6">
-      <h3>{{ sale.name }}'s Toys</h3>
+      <h3>{{ sale.name }}'s Genres</h3>
       {% if sale.genres.count %}
         {% for genres in sale.genres.all %}
           <div class="card">
