--- a/main_app/templates/sales/detail.html
+++ b/main_app/templates/sales/detail.html
@@ -15,6 +15,17 @@
   <a href="{% url 'sales_update' sale.id %}">Edit</a>
   <a href="{% url 'sales_delete' sale.id %}">Delete</a>
 </div>
+{% for photo in sale.photo_set.all %}
+    <img class="responsive-img card-panel" src="{{photo.url}}">
+{% empty %}
+    <div class="card-panel teal-text center-align">No Photos Uploaded</div>
+{% endfor %}
+<form action="{% url 'add_photo' sale.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
+    {% csrf_token %}
+    <input type="file" name="photo-file">
+    <br><br>
+    <input type="submit" class="btn" value="Upload Photo">
+</form>
 <div class="col s6">
   <form action="{% url 'add_mod' sale.id %}" method="post">
     {% csrf_token %}
@@ -76,6 +87,7 @@
       {% else %}
         <h5>{{cat.name}} Already Has All Genres Available</h5>
       {% endif %}
+
 <script>
   var dateEl = document.getElementById('id_date');
   M.Datepicker.init(dateEl, {
